bindings/go/internal/uniffi/blazen/blazen.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
uint16_t uniffi_blazen_uniffi_checksum_func_new_openai_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_openai_embedding_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_openrouter_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_perplexity_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_together_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_tract_embedding_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_new_xai_completion_model(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_init(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_complete_streaming(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_complete_streaming_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_init_langfuse(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_init_otlp(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_init_prometheus(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_parse_workflow_history(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_func_shutdown_telemetry(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_agent_run(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_agent_run_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_toolhandler_execute(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_imagegenmodel_generate(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_imagegenmodel_generate_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_sttmodel_transcribe(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_sttmodel_transcribe_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_ttsmodel_synthesize(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_ttsmodel_synthesize_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionmodel_complete(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionmodel_complete_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionmodel_model_id(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_embeddingmodel_dimensions(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_embeddingmodel_embed(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_embeddingmodel_embed_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_embeddingmodel_model_id(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_peerclient_node_id(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_peerclient_run_remote_workflow(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_peerclient_run_remote_workflow_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_peerserver_serve(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_peerserver_serve_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_delete(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_delete_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_list(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_list_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_list_run_ids(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_list_run_ids_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_load(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_load_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_save(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_checkpointstore_save_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipeline_run(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipeline_run_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipeline_stage_names(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_add_workflow(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_build(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_parallel(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_stage(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_timeout_per_stage_ms(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_pipelinebuilder_total_timeout_ms(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_chunk(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_done(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_error(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_stephandler_invoke(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflow_run(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflow_run_blocking(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflow_step_names(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflowbuilder_build(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflowbuilder_step(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflowbuilder_step_timeout_ms(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_method_workflowbuilder_timeout_ms(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_constructor_agent_new(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_constructor_peerclient_connect(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_constructor_peerserver_new(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_constructor_pipelinebuilder_new(void
    
);
uint16_t uniffi_blazen_uniffi_checksum_constructor_workflowbuilder_new(void
    
);
uint32_t ffi_blazen_uniffi_uniffi_contract_version(void
    
);