bindings/ruby/lib/uniffi/blazen/blazen.rb

    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_openai_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_openai_embedding_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_openrouter_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_perplexity_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_together_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_tract_embedding_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_new_xai_completion_model,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_init,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_complete_streaming,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_complete_streaming_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_init_langfuse,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_init_otlp,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_init_prometheus,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_parse_workflow_history,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_func_shutdown_telemetry,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_agent_run,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_agent_run_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_toolhandler_execute,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_imagegenmodel_generate,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_imagegenmodel_generate_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_sttmodel_transcribe,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_sttmodel_transcribe_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_ttsmodel_synthesize,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_ttsmodel_synthesize_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionmodel_complete,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionmodel_complete_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionmodel_model_id,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_embeddingmodel_dimensions,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_embeddingmodel_embed,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_embeddingmodel_embed_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_embeddingmodel_model_id,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_peerclient_node_id,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_peerclient_run_remote_workflow,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_peerclient_run_remote_workflow_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_peerserver_serve,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_peerserver_serve_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_delete,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_delete_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_list,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_list_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_list_run_ids,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_list_run_ids_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_load,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_load_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_save,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_checkpointstore_save_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipeline_run,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipeline_run_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipeline_stage_names,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_add_workflow,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_build,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_parallel,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_stage,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_timeout_per_stage_ms,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_pipelinebuilder_total_timeout_ms,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_chunk,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_done,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_completionstreamsink_on_error,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_stephandler_invoke,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflow_run,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflow_run_blocking,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflow_step_names,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflowbuilder_build,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflowbuilder_step,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflowbuilder_step_timeout_ms,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_method_workflowbuilder_timeout_ms,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_constructor_agent_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_constructor_peerclient_connect,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_constructor_peerserver_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_constructor_pipelinebuilder_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :uniffi_blazen_uniffi_checksum_constructor_workflowbuilder_new,
    [RustCallStatus.by_ref],
    :uint16
  attach_function :ffi_blazen_uniffi_uniffi_contract_version,
    [RustCallStatus.by_ref],
    :uint32
  
end

  # Public interface members begin here.

  
  
  

class BatchItem
  def initialize
    raise RuntimeError, 'BatchItem cannot be instantiated directly'
  end

  # Each enum variant is a nested class of the enum itself.
  class SUCCESS
    
    attr_reader :response
    
    def initialize(response)
      
      @response = response
      
    end

    def to_s
      "BatchItem::SUCCESS(response=#{@response})"
    end

    def ==(other)
      if !other.success?
        return false
      end
      if @response != other.response
        return false
      end

      true
    end

    # For each variant, we have an `NAME?` method for easily checking
    # whether an instance is that variant.
    
    def success?
      instance_of? BatchItem::SUCCESS
    end
    
    def failure?
      instance_of? BatchItem::FAILURE
    end
    
  end
  class FAILURE
    
    attr_reader :error_message
    
    def initialize(error_message)
      
      @error_message = error_message
      
    end

    def to_s
      "BatchItem::FAILURE(error_message=#{@error_message})"
    end

    def ==(other)
      if !other.failure?
        return false
      end
      if @error_message != other.error_message
        return false
      end

      true
    end

    # For each variant, we have an `NAME?` method for easily checking
    # whether an instance is that variant.
    
    def success?
      instance_of? BatchItem::SUCCESS
    end
    
    def failure?
      instance_of? BatchItem::FAILURE
    end
    
  end
  
end


  
  
  
  

class StepOutput
  def initialize
    raise RuntimeError, 'StepOutput cannot be instantiated directly'
  end

  # Each enum variant is a nested class of the enum itself.
  class NONE
    
    def initialize()
      
      
    end

    def to_s
      "StepOutput::NONE()"
    end

    def ==(other)
      if !other.none?
        return false
      end

      true
    end

    # For each variant, we have an `NAME?` method for easily checking
    # whether an instance is that variant.
    
    def none?
      instance_of? StepOutput::NONE
    end
    
    def single?
      instance_of? StepOutput::SINGLE
    end
    
    def multiple?
      instance_of? StepOutput::MULTIPLE
    end
    
  end
  class SINGLE
    
    attr_reader :event
    
    def initialize(event)
      
      @event = event
      
    end

    def to_s
      "StepOutput::SINGLE(event=#{@event})"
    end

    def ==(other)
      if !other.single?
        return false
      end
      if @event != other.event
        return false
      end

      true
    end

    # For each variant, we have an `NAME?` method for easily checking
    # whether an instance is that variant.
    
    def none?
      instance_of? StepOutput::NONE
    end
    
    def single?
      instance_of? StepOutput::SINGLE
    end
    
    def multiple?
      instance_of? StepOutput::MULTIPLE
    end
    
  end
  class MULTIPLE
    
    attr_reader :events
    
    def initialize(events)
      
      @events = events
      
    end

    def to_s
      "StepOutput::MULTIPLE(events=#{@events})"
    end
